[package]
name = "indexed_db_futures"
version = "0.4.1"
authors = ["Arturas Molcanovas <amolc@protonmail.com>"]
edition = "2021"
rust-version = "1.60.0"
license = "MIT"
description = "Future bindings for IndexedDB via web_sys"
repository = "https://github.com/Alorel/rust-indexed-db"
keywords = ["wasm", "indexeddb", "future", "webassembly", "idb"]
categories = ["asynchronous", "database", "wasm", "web-programming"]
include = [
    "src/",
    "Cargo.toml",
    "README.md"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--cfg",
    "doc_cfg",
]

[features]
default = [
    "cursors",
    "indices"
]
cursors = [
    "web-sys/IdbCursor",
    "web-sys/IdbCursorWithValue",
    "web-sys/IdbCursorDirection"
]
indices = [
    "web-sys/IdbIndex",
    "web-sys/IdbIndexParameters"
]
json = ["serde_json"]
nightly = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[dependencies]
accessory = "1"
cfg-if = "1.0.0"
delegate-display = "2"
fancy_constructor = "1.2.2"
js-sys = "0.3.64"
uuid = { version = "1.5.0", features = ["v4", "wasm-bindgen", "js"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
serde_json = { version = "1.0.108", optional = true }

[dependencies.web-sys]
version = "0.3.64"
features = [
    "DomException",
    "DomStringList",
    "Event",
    "EventTarget",
    "IdbDatabase",
    "IdbFactory",
    "IdbObjectStore",
    "IdbObjectStoreParameters",
    "IdbOpenDbRequest",
    "IdbKeyRange",
    "IdbRequest",
    "IdbRequestReadyState",
    "IdbTransaction",
    "IdbTransactionMode",
    "IdbVersionChangeEvent",
    "Window",
    "WorkerGlobalScope",
]
